docs: consolidate preview environments and update API schema
- Merge preview-environments.mdx into applications-and-environments.mdx
- Update API schema to use oneOf for environment union type (matches Zod schema)
- Add device preset limitation warning to Start Run API docs
- Expand device presets documentation with use cases and examples
- Remove emojis from output-state-optimization headings
- Update navigation to remove preview-environments entry
- Add mobile/responsive testing tip to GitHub App docs

Refs: API schema changes align with packages/parameters/src/index.ts

--- a/api-reference/start-run.mdx
+++ b/api-reference/start-run.mdx
@@ -82,6 +82,11 @@ The request body is optional and can contain the following fields:
 - **`integrationName`** (string): Human-readable name of what triggered this test (defaults to "API")
 - **`testPlanShortId`** (string): The **short ID** of the test plan to execute (this is the 6-character ID visible in test plan URLs)
 - **`applications`** (object): Optional application environment overrides for testing specific environments. Each application can specify either a new environment (with `url` and `name`) or reference an existing environment (with `short_id`).
+
+<Warning>
+**Device Preset Limitation:** Environment overrides are supported via API, but device preset overrides are not. To test with different device configurations, create separate test plans with different device preset settings in the UI.
+</Warning>
+
 - **`notifications`** (array): Slack notification overrides for this run. Provide one or more channel objects to send run updates to specific channels instead of the project's default Slack channel. Details below.
 
 ### Slack Notification Overrides
