--- a/configuration/ci-cd-integration.mdx
+++ b/configuration/ci-cd-integration.mdx
@@ -35,7 +35,7 @@ Works with any CI/CD system that can make HTTP requests. You create test plans i
 
 ### What You Can Do
 
-- **Test preview/staging environments** - Override application URLs dynamically when testing Vercel, Netlify, or custom preview deployments. See [Preview Environments](/core-concepts/preview-environments).
+- **Test preview/staging environments** - Override application URLs dynamically when testing Vercel, Netlify, or custom preview deployments. See [Preview Environments](/core-concepts/applications-and-environments#preview-environments).
 
 - **Block deployments until tests pass** - Wait for test results before proceeding with your pipeline. The GitHub Action has built-in blocking support; other platforms can poll the [Run Status API](/api-reference/run-status) to wait for completion.
 
@@ -82,4 +82,4 @@ AI exploratory testing is currently available for GitHub only. For other platfor
 
 - **[Test Plans](/core-concepts/test-plans)** - Create and organize test plans to run via API
 - **[API Reference](/api-reference/start-run)** - Complete API documentation with all parameters
-- **[Preview Environments](/core-concepts/preview-environments)** - Testing dynamic preview deployments
+- **[Preview Environments](/core-concepts/applications-and-environments#preview-environments)** - Testing dynamic preview deployments
