--- a/configuration/gitlab.mdx
+++ b/configuration/gitlab.mdx
@@ -204,4 +204,4 @@ See [Run Status API](/api-reference/run-status) for polling logic details and er
 - **[CI/CD Integration](/configuration/ci-cd-integration)** - Overview of integration modes
 - **[API Reference](/api-reference/start-run)** - Complete API documentation
 - **[Test Plans](/core-concepts/test-plans)** - Create and organize test plans
-- **[Preview Environments](/core-concepts/preview-environments)** - Dynamic preview testing
+- **[Preview Environments](/core-concepts/applications-and-environments#preview-environments)** - Dynamic preview testing
