--- a/core-concepts/ai-chat-assistant.mdx
+++ b/core-concepts/ai-chat-assistant.mdx
@@ -53,7 +53,7 @@ The assistant can show you what [configurations](/core-concepts/configs) are ava
 
 **GitHub Integration**
 
-It can fetch information about your [GitHub pull requests](/configuration/github) and write comprehensive test reviews directly on your PRs. When you ask it to test a pull request, it can run relevant tests against the [preview environment](/core-concepts/preview-environments) and provide detailed feedback on what was verified and what issues were found.
+It can fetch information about your [GitHub pull requests](/configuration/github) and write comprehensive test reviews directly on your PRs. When you ask it to test a pull request, it can run relevant tests against the [preview environment](/core-concepts/applications-and-environments#preview-environments) and provide detailed feedback on what was verified and what issues were found.
 
 **Help & Support**
 
