--- a/core-concepts/output-state-optimization.mdx
+++ b/core-concepts/output-state-optimization.mdx
@@ -49,11 +49,11 @@ If any condition isn't met, the dependency test runs first to generate fresh bro
 
 ## Benefits & Safety
 
-### ⚡ Faster Execution
+### Faster Execution
 
 Skip redundant dependency tests that recently completed successfully.
 
-### 🔒 Safe & Reliable
+### Safe & Reliable
 
 Multiple safety checks ensure reliability is never compromised:
 
@@ -61,7 +61,7 @@ Multiple safety checks ensure reliability is never compromised:
 - **Success Verification**: Only uses state from tests that passed completely
 - **Graceful Fallback**: Runs tests normally if dependency output states aren't available
 
-### 🌍 Environment Aware
+### Environment Aware
 
 **Environment Isolation**: Never mixes browser state between different environments - each environment's dependencies are kept separate.
 
